# os_mai

./: README.md
1/: CMakeLists.txt  LICENSE  README.md  child1.c  os_api.h  os_linux.c  parent.c
1/code/: CMakeLists.txt  child2.c  parent.c
1/code/linux/: os_linux.c  os_linux.h
1/code/win/: os_windows.c  win_api.h
1/linux/: os.h  os_linux.c  os_linux.h
1/src/: benchmark.tex  literature.tex  problem.tex  src.tex  thinks.tex  titlepage.tex
1/styles/: log-style.sty
1/win/: os.h  os_windows.c  win_api.h
2/: report.tex
2/code/: CMakeLists.txt  main.c  os.h
2/code/linux/: os_linux.c  os_linux.h
2/src/: benchmark.tex  literature.tex  problem.tex  src.tex  thinks.tex  titlepage.tex
